vehicle/tests/golden/error/parameter/givenDefinition/spec.vcl
@parameter
epsilon : Real
epsilon = 0.1
